--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ a {
     text-decoration: none;
 }
 
+div img{
+    display: block;
+    width: 100%;
+}
+
 .flex-container {
     display: flex;
     max-width: 992px;
@@ -45,4 +50,60 @@ header .list-items{
 header .menu{
 
     justify-content: space-between;
+}
+
+.apresentacao{
+ height: 100vh;
+ align-items: center;
+ justify-content: space-between;
+}
+
+.apresentacao .texto-apresentacao{
+    min-height: 200px;
+}
+.texto-apresentacao h1{
+color: #122a57;
+font-size: 48px;
+margin-bottom: 10px;
+}
+
+.texto-apresentacao a{
+    background-color: #122a57;
+    color: #fff;
+    text-align: center;
+    border-radius: 40px;
+    width: 220px;
+    display: block;
+    height: 30px;
+    line-height: 30px;
+}
+
+#quem-somos{
+
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#quem-somos h2{
+
+    font-size: 32px;
+    color: #122a57;
+    display: flex;
+    margin-bottom: 20px;
+}
+#quem-somos p{
+    margin-bottom: 10px;
+    width: 90%;
+}
+
+
+#quem-somos h2::before{
+    content: "";
+    height: 50px;
+    width: 5px;
+    margin-right:5px ;
+    background-color: #122a57;
+    position: relative;
+
 }
