--- a/style.css
+++ b/style.css
@@ -107,3 +107,81 @@ margin-bottom: 10px;
     position: relative;
 
 }
+#quem-somos img{
+    min-width: 420px;
+}
+
+.container-externo{
+    background-color: #122a57;
+    width: 100%;
+}
+
+#servicos{
+    flex-direction:column ;
+    padding-top: 50px;
+    padding-bottom: 100px;
+}
+#servicos h2{
+    color: #fff;
+    font-size: 32px;
+    margin-bottom: 30px;
+}
+
+.list-servicos{
+    display: flex;
+    justify-content: space-between ;
+}
+
+.list-servicos .item-servico{
+    text-align: center;
+}
+
+.item-servico a{
+ width: 220px;
+ background-color: #fff;
+ border-radius: 40px;
+ text-align: center;
+ margin-top: 30px;
+ line-height: 50px;
+ padding: 5px 10px;
+ font-size: 18px;
+ color: #122a57;
+ font-weight: 700;
+
+}
+
+.item-servico p{
+    font-weight:700;
+    font-size: 18px;
+    color: #fff;
+    margin-top: 20px;
+
+}
+
+.item-servico img{
+    width: 80%;
+    margin: auto;
+}
+
+#planos{
+    flex-direction: column;
+    min-height: 100vh;
+
+}
+
+.list-planos{
+    display: flex;
+    align-items: flex-end;
+
+
+}
+
+.item-planos{
+   flex: 1;
+   border: 5px solid #122a57;
+   margin-right: 20px;
+}
+
+
+
+
